# OMNI-Columbia-IRT

./: .gitignore  Makefile  README  configure
android_porting/: common.sh  compile.sh  dependency.sh  experiment.sh  hipl_porting.sh  middleware_build.sh  middleware_porting.sh  mih  mih_porting.sh  ndk.sh  odtone_build.sh  odtone_porting.sh  push.sh  tcp_wrapper.patch
android_porting/install/odtone/: mih
android_porting/kernel/: README
android_porting/scripts/: common_build.sh  hipl_build.sh  middleware_build.sh  ndk_config.sh  odtone_build.sh
android_porting/test/: mih_test.c
middleware/: Makefile  locsw
middleware/connectionMgr/: connectionMgr.c  connectionMgr.h
middleware/locationMgr/: lm.cpp
middleware/locationSwitch/: locationSwitch.cpp
middleware/networkMgr/: nm.cpp
middleware/policyMgr/: PolicyListener.cpp  PolicyModel.cpp
middleware/protocolMgr/: sine_socket.c  sine_socket.h
middleware/securityMgr/: sm.cpp
protocols/hip/: Makefile.am  Makefile.am.patch  Makefile.in  Makefile.in.patch  hipd_omni.c  hipd_omni.h  hipd_sine.c  hipd_sine.h  hipl_sine.c  main.c  main.c.patch  main_edited.c  test.c
protocols/hipl-1.0.8/: .dir-locals.el  .uncrustify-0.57.cfg  .uncrustify.cfg  .vimrc  COPYING  INSTALL  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  version.h
protocols/hipl-1.0.8/.commitguards/: author-attribution.guard  copyright-guard-space.guard  copyright-guard-space.py  copyright-year.guard  no-tabs.guard  trailing-lines.guard  trailing-whitespace.guard  unix-line-breaks.guard
protocols/hipl-1.0.8/android/: android.h  ifaddrs.c  ifaddrs.h
protocols/hipl-1.0.8/android/linux/: xfrm.h
protocols/hipl-1.0.8/debian/: control  hipl-daemon.init  hipl-daemon.install  hipl-dnsproxy.config  hipl-dnsproxy.init  hipl-dnsproxy.install.in  hipl-dnsproxy.postinst  hipl-dnsproxy.templates  hipl-doc.doc-base  hipl-firewall.init  hipl-firewall.install
protocols/hipl-1.0.8/debian/resolvconf/: hipdnsproxy
protocols/hipl-1.0.8/doc/: Doxyfile.in  HACKING  HOWTO.html  HOWTO.xml.in  hipl_android_preparation_guide.txt
protocols/hipl-1.0.8/hipd/: hipd.conf  hosts  main.c  relay.conf
protocols/hipl-1.0.8/hipfw/: cache.c  cache.h  cert.c  cert.h  common_types.h  conntrack.c  conntrack.h  dlist.c  dlist.h  esp_prot_api.c  esp_prot_api.h  esp_prot_config.c  esp_prot_config.h  esp_prot_conntrack.c  esp_prot_conntrack.h  esp_prot_defines.h  esp_prot_fw_msg.c  esp_prot_fw_msg.h  file_buffer.c  file_buffer.h  helpers.c  helpers.h  hipfw.c  hipfw.conf  hipfw.h  hipfw_control.c  hipfw_control.h  hipfw_defines.h  hslist.c  hslist.h  line_parser.h  lsi.c  lsi.h  main.c  mem_area.h  midauth.c  midauth.h  port_bindings.c  port_bindings.h  reinject.c  (+13 more)
protocols/hipl-1.0.8/libcore/: builder.c  builder.h  capability.c  capability.h  cert.c  cert.h  certtools.c  certtools.h  checksum.c  checksum.h  common.h  conf.c  conf.h  crypto.c  crypto.h  debug.c  debug.h  esp_prot_common.h  filemanip.c  filemanip.h  hashchain.h  hashchain_store.h  hashtable.c  hashtable.h  hashtree.h  hip_udp.h  hit.h  hostid.c  hostid.h  hostsfiles.c  hostsfiles.h  icomm.h  ife.h  keylen.h  linkedlist.h  list.h  message.c  message.h  modularization.c  modularization.h  (+15 more)
protocols/hipl-1.0.8/libcore/gpl/: nlink.c  nlink.h  pk.c  pk.h  xfrmapi.c  xfrmapi.h
protocols/hipl-1.0.8/libhipl/: accessor.h  cert.c  cert.h  close.c  close.h  configfilereader.c  configfilereader.h  cookie.c  cookie.h  dh.c  dh.h  esp_prot_anchordb.c  esp_prot_anchordb.h  esp_prot_hipd_msg.c  esp_prot_hipd_msg.h  esp_prot_light_update.c  esp_prot_light_update.h  hadb.c  hadb.h  hidb.c  hidb.h  hip_socket.c  hip_socket.h  hipd.c  hipd.h  hiprelay.c  hiprelay.h  hit_to_ip.c  hit_to_ip.h  init.c  init.h  input.c  input.h  keymat.c  keymat.h  lhipl.c  lhipl.h  lhipl_operations.c  lhipl_operations.h  lhipl_sock.c  (+25 more)
protocols/hipl-1.0.8/modules/cert/: module_info.xml
protocols/hipl-1.0.8/modules/cert/hipd/: cert.c  cert.h
protocols/hipl-1.0.8/modules/heartbeat/hipd/: heartbeat.c  heartbeat.h
protocols/hipl-1.0.8/modules/heartbeat_update/hipd/: hb_update.c  hb_update.h
protocols/hipl-1.0.8/modules/midauth/hipd/: midauth.c  midauth.h
protocols/hipl-1.0.8/modules/midauth/lib/: midauth_builder.c  midauth_builder.h
protocols/hipl-1.0.8/modules/update/hipd/: update.c  update.h  update_builder.c  update_builder.h  update_locator.c  update_locator.h  update_param_handling.c  update_param_handling.h
protocols/hipl-1.0.8/packaging/: create-package.sh  hipl.spec
protocols/hipl-1.0.8/packaging/fedora-init.d/: dnsproxy
protocols/hipl-1.0.8/packaging/openwrt/hipl/: Makefile.in
protocols/hipl-1.0.8/patches/android/ndk/: ip.h.patch  ip_icmp.h.patch  swab.h.patch
protocols/hipl-1.0.8/patches/centos/: centos-spec.patch
protocols/hipl-1.0.8/test/: certteststub.c  check_hipd.c  check_hipfw.c  check_libcore.c  check_libhipl.c  mocks.c  mocks.h
protocols/hipl-1.0.8/test/hipd/: lsidb.c  test_suites.h
protocols/hipl-1.0.8/test/hipd/modules/: midauth.c
protocols/hipl-1.0.8/test/hipfw/: conntrack.c  file_buffer.c  helpers.c  line_parser.c  midauth.c  port_bindings.c  test_suites.h
protocols/hipl-1.0.8/test/libcore/: cert.c  checksum.c  crypto.c  hit.c  hostid.c  solve.c  straddr.c  test_cert.pem  test_key.pem  test_suites.h
protocols/hipl-1.0.8/test/libcore/gpl/: pk.c
protocols/hipl-1.0.8/test/libcore/modules/: midauth_builder.c
protocols/hipl-1.0.8/test/performance/: auth_performance.c  dh_performance.c  fw_port_bindings_performance.c  hc_performance.c
protocols/hipl-1.0.8/tools/: compile_remote.sh  hipconf.c  hipl_autobuild.sh  prepare_android_toolchain.sh
protocols/hipl-1.0.8/tools/bazaar/plugins/: commitguard.py
protocols/hipl-1.0.8/tools/hipdnsproxy/: dnsproxy.py  dnsproxy_test.py  hipdnsproxy.in  hosts.py  resolvconf.py  resolvconf_test.py  util.py
protocols/hipl-1.0.8/tools/hipdnsproxy/DNS/: Type.py
protocols/hipl-1.0.8/tools/maintainer/: bzr-update-hipl  sync-all
protocols/hipl-1.0.8/tools/nsupdate/: nsupdate.conf  nsupdate.in
protocols/mih/: mih  mih_usr.cpp
(+15 files in other folders)
